@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2011  Vasco Nunes, Piotr Ożarowski
 
 
+2011-05-18  Michael Jahn
+	* updated CineMovies plugin (thanks to Olivier BOURSIN)
+
 2011-05-12  Michael Jahn
 	* added "virtual" resolutions (4:3 Fullscreen, Widescreen, Anamorphic Widescreen)
 
